@@ -30,7 +30,7 @@ my %WriteMakefileArgs = (
     "JSON::MaybeXS" => 0,
     "LWP::Protocol::https" => 0,
     "LWP::UserAgent" => 0,
-    "List::MoreUtils" => 0,
+    "List::SomeUtils" => 0,
     "List::Util" => 0,
     "MIME::Base64" => 0,
     "MaxMind::DB::Reader" => "1.000000",
@@ -85,7 +85,7 @@ my %FallbackPrereqs = (
   "JSON::MaybeXS" => 0,
   "LWP::Protocol::https" => 0,
   "LWP::UserAgent" => 0,
-  "List::MoreUtils" => 0,
+  "List::SomeUtils" => 0,
   "List::Util" => 0,
   "MIME::Base64" => 0,
   "MaxMind::DB::Metadata" => 0,
