@@ -8,7 +8,7 @@ requires "HTTP::Request" => "0";
 requires "JSON::MaybeXS" => "0";
 requires "LWP::Protocol::https" => "0";
 requires "LWP::UserAgent" => "0";
-requires "List::MoreUtils" => "0";
+requires "List::SomeUtils" => "0";
 requires "List::Util" => "0";
 requires "MIME::Base64" => "0";
 requires "MaxMind::DB::Reader" => "1.000000";
