@@ -6,6 +6,7 @@
 - Documented $reader->enterprise()
 - Updated usage of Data::Validate::IP so that we don't do separate IPv4 and
   IPv6 checks. This provides a very small performance gain.
+- Switched from List::MoreUtils to List::SomeUtils. Fixes #52.
 
 
 2.003005 2017-05-08
